--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -335,7 +335,7 @@ ru:
       widgets: "Widgets"
       explorer: "%{network} Explorer"
       by: "от"
-      created: "Bitquery.io"
+      created: "Openchain.info"
       feel_free: "Не стесняйтесь использовать любой виджет с этой страницы, нажмите кнопку JS и скопируйте / вставьте код. Попробуйте API с помощью кнопки GraphQL!"
     address:
       description:
