--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -333,7 +333,7 @@ zh:
     footer:
       built: "建立"
       explorer: "%{network} 探险者"
-      created: "Bitquery.io"
+      created: "Openchain.info"
       widgets: "Widgets"
       feel_free: "随意使用此页面上的任何小部件，按JS按钮并复制/粘贴代码。 使用GraphQL按钮检查API！"
     address:
